# homeandgarden-site

./: .env.example  .gitignore  CNAME  README.md  get_photo_info.py  hugo.toml  index.html
.github/instructions/: agent_instructions.yaml  agent_readme.md
.github/workflows/: deploy.yml  hugo.yml  pages.yml
config/_default/: hugo.toml
content/: _index.md
content/pages/: about.md
content/posts/: companion-planting.md  diy-shade-solutions.md  getting-started-with-vegetable-gardening.md  indoor-herb-garden.md  keeping-the-yard-healthy.md  natural-pest-control-summer.md  summer-energy-conservation.md  summer-lawn-care.md  summer-vegetable-garden-planning.md  troubleshooting-tomato-diseases-heat-care.md  watering-tips-hot-weather.md
docs/: index.html
layouts/_partials/: favicon.html
layouts/pages/: single.html
public/: 404.html  index.html  index.xml  sitemap.xml
public/about/: index.html
public/about-home-garden-paradise/: index.html
public/categories/: index.html  index.xml
public/css/: styles.css.map
public/js/: index.min.ee5e14ea7b35e3a49e5ce42b2b6a748764d9f9586352968bff069fe8ac3133e605528bf41955e4bb0ddd45ba10c226cd3cc6752252138f2fdb67ee47c80a0439.js
public/pages/: index.html  index.xml
public/posts/: index.html  index.xml
public/tags/: index.html  index.xml
scripts/: README.md  create_favicon.py  link_fixer.py  link_validator.py  link_validator_enhanced.py  populate_image_tracking.py  pyproject.toml  requirements.txt  setup.sh  store_api_key.py  test-local.sh  unsplash_manager.py  used_images.json  validate_and_fix.py
static/: CNAME
(+79 files in other folders)
